refactor: 借金履歴なしでもServerLoan残額を設定可能にする
